# battleship-cpp

./: .gitignore  CMakeLists.txt  README.md  ZipFile.txt  da
BattleshipBack/: .gitignore
BattleshipBack/controllers/: boardController.cpp  boardController.h  gameController.cpp  gameController.h  playerController.cpp  playerController.h  robotController.cpp  robotController.h  shipController.cpp  shipController.h
BattleshipBack/include/: CircularLinkedList.h  attack.h  board.h  controller.h  fleet.h  player.h  robotplayer.h  ship.h
BattleshipBack/src/: CircularLinkedList.cpp  attack.cpp  blabla.cpp  board.cpp  boardController.cpp  fleet.cpp  main.cpp  player.cpp  position.cpp  robotplayer.cpp  ship.cpp
BattleshipFront/: BattleshipFront.pro  main.cpp  textures.qrc
BattleshipFront/Forms/: battleWindow.ui  mainwindow.ui
BattleshipFront/Headers/: battleWindow.h  boardCell.h  boardRenderer.h  draggableShip.h  mainwindow.h  resourceUtils.h  selectorSpace.h  soundManager.h
BattleshipFront/Sources/: battleWindow.cpp  boardCell.cpp  boardRenderer.cpp  draggableShip.cpp  mainwindow.cpp  selectorSpace.cpp  soundManager.cpp
include/: board.h  fleet.h  player.h  position.h  ship.h
src/: board.cpp  fleet.cpp  main.cpp  position.cpp  ship.cpp
